--- a/HTB/Active Directory Enumeration & Attacks/14. Credentialed Enumeration - from Linux.md
+++ b/HTB/Active Directory Enumeration & Attacks/14. Credentialed Enumeration - from Linux.md
@@ -332,3 +332,427 @@ canklesmaks@htb[/htb]$ smbmap -u forend -p Klmcargo2 -d INLANEFREIGHT.LOCAL -H 1
 As the recursive listing dives deeper, it will show you the output of all subdirectories within the higher-level directories. The use of `--dir-only` provided only the output of all directories and did not list all files. Try this against other shares on the Domain Controller and see what you can find.
 
 Now that we've covered shares, let's look at `RPCClient`.
+
+## rpcclient
+
+[rpcclient](https://www.samba.org/samba/docs/current/man-html/rpcclient.1.html) is a handy tool created for use with the Samba protocol and to provide extra functionality via MS-RPC.
+* It can enumerate, add, change, and even remove objects from AD. It is highly versatile; we just have to find the correct command to issue for what we want to accomplish. 
+* The man page for rpcclient is very helpful for this; just type `man rpcclient` into your attack host's shell and review the options available. Let's cover a few rpcclient functions that can be helpful during a penetration test.
+
+Due to SMB NULL sessions (covered in-depth in the password spraying sections) on some of our hosts, we can perform authenticated or unauthenticated enumeration using rpcclient in the INLANEFREIGHT.LOCAL domain. An example of using rpcclient from an unauthenticated standpoint (if this configuration exists in our target domain) would be:
+
+Code: bash
+
+```bash
+rpcclient -U "" -N 172.16.5.5
+```
+
+The above will provide us with a bound connection, and we should be greeted with a new prompt to start unleashing the power of rpcclient.
+
+#### SMB NULL Session with rpcclient
+
+![GIF showcasing the usage of rpcclient with SMB NULL session.](https://academy.hackthebox.com/storage/modules/143/rpcclient.png)
+
+From here, we can begin to enumerate any number of different things. Let's start with domain users.
+
+#### rpcclient Enumeration
+
+While looking at users in rpcclient, you may notice a field called `rid:` beside each user. 
+* A [Relative Identifier (RID)](https://docs.microsoft.com/en-us/windows/security/identity-protection/access-control/security-identifiers) is a unique identifier (represented in hexadecimal format) utilized by Windows to track and identify objects. To explain how this fits in, let's look at the examples below:
+
+- The [SID](https://docs.microsoft.com/en-us/windows/security/identity-protection/access-control/security-identifiers) for the INLANEFREIGHT.LOCAL domain is: `S-1-5-21-3842939050-3880317879-2865463114`.
+- When an object is created within a domain, the number above (SID) will be combined with a RID to make a unique value used to represent the object.
+- So the domain user `htb-student` with a RID:[0x457] Hex 0x457 would = decimal `1111`, will have a full user SID of: `S-1-5-21-3842939050-3880317879-2865463114-1111`.
+- This is unique to the `htb-student` object in the INLANEFREIGHT.LOCAL domain and you will never see this paired value tied to another object in this domain or any other.
+
+However, there are accounts that you will notice that have the same RID regardless of what host you are on. 
+* Accounts like the built-in Administrator for a domain will have a RID [administrator] rid:[0x1f4], which, when converted to a decimal value, equals `500`. 
+* The built-in Administrator account will always have the RID value `Hex 0x1f4`, or 500. This will always be the case. Since this value is unique to an object, we can use it to enumerate further information about it from the domain. Let's give it a try again with rpcclient. We will dig a bit targeting the `htb-student` user.
+
+#### RPCClient User Enumeration By RID
+
+Credentialed Enumeration - from Linux
+
+```shell-session
+rpcclient $> queryuser 0x457
+
+        User Name   :   htb-student
+        Full Name   :   Htb Student
+        Home Drive  :
+        Dir Drive   :
+        Profile Path:
+        Logon Script:
+        Description :
+        Workstations:
+        Comment     :
+        Remote Dial :
+        Logon Time               :      Wed, 02 Mar 2022 15:34:32 EST
+        Logoff Time              :      Wed, 31 Dec 1969 19:00:00 EST
+        Kickoff Time             :      Wed, 13 Sep 30828 22:48:05 EDT
+        Password last set Time   :      Wed, 27 Oct 2021 12:26:52 EDT
+        Password can change Time :      Thu, 28 Oct 2021 12:26:52 EDT
+        Password must change Time:      Wed, 13 Sep 30828 22:48:05 EDT
+        unknown_2[0..31]...
+        user_rid :      0x457
+        group_rid:      0x201
+        acb_info :      0x00000010
+        fields_present: 0x00ffffff
+        logon_divs:     168
+        bad_password_count:     0x00000000
+        logon_count:    0x0000001d
+        padding1[0..7]...
+        logon_hrs[0..21]...
+```
+
+When we searched for information using the `queryuser` command against the RID `0x457`, RPC returned the user information for `htb-student` as expected. This wasn't hard since we already knew the RID for `htb-student`. If we wished to enumerate all users to gather the RIDs for more than just one, we would use the `enumdomusers` command.
+
+#### Enumdomusers
+
+Credentialed Enumeration - from Linux
+
+```shell-session
+rpcclient $> enumdomusers
+
+user:[administrator] rid:[0x1f4]
+user:[guest] rid:[0x1f5]
+user:[krbtgt] rid:[0x1f6]
+user:[lab_adm] rid:[0x3e9]
+user:[htb-student] rid:[0x457]
+user:[avazquez] rid:[0x458]
+user:[pfalcon] rid:[0x459]
+user:[fanthony] rid:[0x45a]
+user:[wdillard] rid:[0x45b]
+user:[lbradford] rid:[0x45c]
+user:[sgage] rid:[0x45d]
+user:[asanchez] rid:[0x45e]
+user:[dbranch] rid:[0x45f]
+user:[ccruz] rid:[0x460]
+user:[njohnson] rid:[0x461]
+user:[mholliday] rid:[0x462]
+
+<SNIP>  
+```
+
+Using it in this manner will print out all domain users by name and RID. 
+* Our enumeration can go into great detail utilizing rpcclient. We could even start performing actions such as editing users and groups or adding our own into the domain, but this is out of scope for this module. 
+* For now, we just want to perform domain enumeration to validate our findings. Take some time to play with the other rpcclient functions and see the results they produce. 
+* For more information on topics such as SIDs, RIDs, and other core components of AD, it would be worthwhile to check out the [Introduction to Active Directory](https://academy.hackthebox.com/course/preview/introduction-to-active-directory) module. Now, it's time to plunge into Impacket in all its glory.
+
+---
+
+## Impacket Toolkit
+
+Impacket is a versatile toolkit that provides us with many different ways to enumerate, interact, and exploit Windows protocols and find the information we need using Python. 
+* The tool is actively maintained and has many contributors, especially when new attack techniques arise. We could perform many other actions with Impacket, but we will only highlight a few in this section; [wmiexec.py](https://github.com/SecureAuthCorp/impacket/blob/master/examples/wmiexec.py) and [psexec.py](https://github.com/SecureAuthCorp/impacket/blob/master/examples/psexec.py). Earlier in the poisoning section, we grabbed a hash for the user `wley` with `Responder` and cracked it to obtain the password `transporter@4`. 
+* We will see in the next section that this user is a local admin on the `ACADEMY-EA-FILE` host. We will utilize the credentials for the next few actions.
+
+#### Psexec.py
+
+One of the most useful tools in the Impacket suite is `psexec.py`.
+* Psexec.py is a clone of the Sysinternals psexec executable, but works slightly differently from the original. 
+* The tool creates a remote service by uploading a randomly-named executable to the `ADMIN$` share on the target host. It then registers the service via `RPC` and the `Windows Service Control Manager`. 
+* Once established, communication happens over a named pipe, providing an interactive remote shell as `SYSTEM` on the victim host.
+
+#### Using psexec.py
+
+To connect to a host with psexec.py, we need credentials for a user with local administrator privileges.
+
+Code: bash
+
+```bash
+psexec.py inlanefreight.local/wley:'transporter@4'@172.16.5.125  
+```
+
+![GIF showcasing the usage of psexec.py, authenticating as the user wley.](https://academy.hackthebox.com/storage/modules/143/psexec-action.png)
+
+Once we execute the psexec module, it drops us into the `system32` directory on the target host. We ran the `whoami` command to verify, and it confirmed that we landed on the host as `SYSTEM`. 
+* From here, we can perform most any task on this host; anything from further enumeration to persistence and lateral movement. Let's give another Impacket module a try: `wmiexec.py`.
+
+#### wmiexec.py
+
+Wmiexec.py utilizes a semi-interactive shell where commands are executed through [Windows Management Instrumentation](https://docs.microsoft.com/en-us/windows/win32/wmisdk/wmi-start-page). 
+* It does not drop any files or executables on the target host and generates fewer logs than other modules. After connecting, it runs as the local admin user we connected with (this can be less obvious to someone hunting for an intrusion than seeing SYSTEM executing many commands). 
+* This is a more stealthy approach to execution on hosts than other tools, but would still likely be caught by most modern anti-virus and EDR systems. We will use the same account as with psexec.py to access the host.
+
+#### Using wmiexec.py
+
+Code: bash
+
+```bash
+wmiexec.py inlanefreight.local/wley:'transporter@4'@172.16.5.5  
+```
+
+![GIF showcasing the usage of wmiexec.py, authenticating as the user wley.](https://academy.hackthebox.com/storage/modules/143/wmiexec-action.png)
+
+Note that this shell environment is not fully interactive, so each command issued will execute a new cmd.exe from WMI and execute your command.
+* The downside of this is that if a vigilant defender checks event logs and looks at event ID [4688: A new process has been created](https://docs.microsoft.com/en-us/windows/security/threat-protection/auditing/event-4688), they will see a new process created to spawn cmd.exe and issue a command. 
+* This isn't always malicious activity since many organizations utilize WMI to administer computers, but it can be a tip-off in an investigation. 
+* In the image above, it's also apparent that the process is running under the context of user `wley` on the host, not as SYSTEM. Impacket is an immensely valuable tool that has plenty of use cases. We will see many other tools in the Impacket toolkit throughout the remainder of this module. 
+* As a pentester working with Windows hosts, this tool should always be in our arsenal. Let's move on to the next tool, `Windapsearch`.
+
+---
+
+## Windapsearch
+
+[Windapsearch](https://github.com/ropnop/windapsearch) is another handy Python script we can use to enumerate users, groups, and computers from a Windows domain by utilizing LDAP queries. It is present in our attack host's /opt/windapsearch/ directory.
+
+#### Windapsearch Help
+
+Credentialed Enumeration - from Linux
+
+```shell-session
+canklesmaks@htb[/htb]$ windapsearch.py -h
+
+usage: windapsearch.py [-h] [-d DOMAIN] [--dc-ip DC_IP] [-u USER]
+                       [-p PASSWORD] [--functionality] [-G] [-U] [-C]
+                       [-m GROUP_NAME] [--da] [--admin-objects] [--user-spns]
+                       [--unconstrained-users] [--unconstrained-computers]
+                       [--gpos] [-s SEARCH_TERM] [-l DN]
+                       [--custom CUSTOM_FILTER] [-r] [--attrs ATTRS] [--full]
+                       [-o output_dir]
+
+Script to perform Windows domain enumeration through LDAP queries to a Domain
+Controller
+
+optional arguments:
+  -h, --help            show this help message and exit
+
+Domain Options:
+  -d DOMAIN, --domain DOMAIN
+                        The FQDN of the domain (e.g. 'lab.example.com'). Only
+                        needed if DC-IP not provided
+  --dc-ip DC_IP         The IP address of a domain controller
+
+Bind Options:
+  Specify bind account. If not specified, anonymous bind will be attempted
+
+  -u USER, --user USER  The full username with domain to bind with (e.g.
+                        'ropnop@lab.example.com' or 'LAB\ropnop'
+  -p PASSWORD, --password PASSWORD
+                        Password to use. If not specified, will be prompted
+                        for
+
+Enumeration Options:
+  Data to enumerate from LDAP
+
+  --functionality       Enumerate Domain Functionality level. Possible through
+                        anonymous bind
+  -G, --groups          Enumerate all AD Groups
+  -U, --users           Enumerate all AD Users
+  -PU, --privileged-users
+                        Enumerate All privileged AD Users. Performs recursive
+                        lookups for nested members.
+  -C, --computers       Enumerate all AD Computers
+
+  <SNIP>
+```
+
+We have several options with Windapsearch to perform standard enumeration (dumping users, computers, and groups) and more detailed enumeration. The `--da` (enumerate domain admins group members ) option and the `-PU` ( find privileged users) options. The `-PU` option is interesting because it will perform a recursive search for users with nested group membership.
+
+#### Windapsearch - Domain Admins
+
+Credentialed Enumeration - from Linux
+
+```shell-session
+canklesmaks@htb[/htb]$ python3 windapsearch.py --dc-ip 172.16.5.5 -u forend@inlanefreight.local -p Klmcargo2 --da
+
+[+] Using Domain Controller at: 172.16.5.5
+[+] Getting defaultNamingContext from Root DSE
+[+]	Found: DC=INLANEFREIGHT,DC=LOCAL
+[+] Attempting bind
+[+]	...success! Binded as: 
+[+]	 u:INLANEFREIGHT\forend
+[+] Attempting to enumerate all Domain Admins
+[+] Using DN: CN=Domain Admins,CN=Users.CN=Domain Admins,CN=Users,DC=INLANEFREIGHT,DC=LOCAL
+[+]	Found 28 Domain Admins:
+
+cn: Administrator
+userPrincipalName: administrator@inlanefreight.local
+
+cn: lab_adm
+
+cn: Matthew Morgan
+userPrincipalName: mmorgan@inlanefreight.local
+
+<SNIP>
+```
+
+From the results in the shell above, we can see that it enumerated 28 users from the Domain Admins group. Take note of a few users we have already seen before and may even have a hash or cleartext password like `wley`, `svc_qualys`, and `lab_adm`.
+
+To identify more potential users, we can run the tool with the `-PU` flag and check for users with elevated privileges that may have gone unnoticed. This is a great check for reporting since it will most likely inform the customer of users with excess privileges from nested group membership.
+
+#### Windapsearch - Privileged Users
+
+Credentialed Enumeration - from Linux
+
+```shell-session
+canklesmaks@htb[/htb]$ python3 windapsearch.py --dc-ip 172.16.5.5 -u forend@inlanefreight.local -p Klmcargo2 -PU
+
+[+] Using Domain Controller at: 172.16.5.5
+[+] Getting defaultNamingContext from Root DSE
+[+]     Found: DC=INLANEFREIGHT,DC=LOCAL
+[+] Attempting bind
+[+]     ...success! Binded as:
+[+]      u:INLANEFREIGHT\forend
+[+] Attempting to enumerate all AD privileged users
+[+] Using DN: CN=Domain Admins,CN=Users,DC=INLANEFREIGHT,DC=LOCAL
+[+]     Found 28 nested users for group Domain Admins:
+
+cn: Administrator
+userPrincipalName: administrator@inlanefreight.local
+
+cn: lab_adm
+
+cn: Angela Dunn
+userPrincipalName: adunn@inlanefreight.local
+
+cn: Matthew Morgan
+userPrincipalName: mmorgan@inlanefreight.local
+
+cn: Dorothy Click
+userPrincipalName: dclick@inlanefreight.local
+
+<SNIP>
+
+[+] Using DN: CN=Enterprise Admins,CN=Users,DC=INLANEFREIGHT,DC=LOCAL
+[+]     Found 3 nested users for group Enterprise Admins:
+
+cn: Administrator
+userPrincipalName: administrator@inlanefreight.local
+
+cn: lab_adm
+
+cn: Sharepoint Admin
+userPrincipalName: sp-admin@INLANEFREIGHT.LOCAL
+
+<SNIP>
+```
+
+You'll notice that it performed mutations against common elevated group names in different languages. This output gives an example of the dangers of nested group membership, and this will become more evident when we work with BloodHound graphics to visualize this.
+
+---
+
+## Bloodhound.py
+
+Once we have domain credentials, we can run the [BloodHound.py](https://github.com/fox-it/BloodHound.py) BloodHound ingestor from our Linux attack host. 
+* BloodHound is one of, if not the most impactful tools ever released for auditing Active Directory security, and it is hugely beneficial for us as penetration testers. We can take large amounts of data that would be time-consuming to sift through and create graphical representations or "attack paths" of where access with a particular user may lead. 
+* We will often find nuanced flaws in an AD environment that would have been missed without the ability to run queries with the BloodHound GUI tool and visualize issues. 
+* The tool uses [graph theory](https://en.wikipedia.org/wiki/Graph_theory) to visually represent relationships and uncover attack paths that would have been difficult, or even impossible to detect with other tools. 
+* The tool consists of two parts: the [SharpHound collector](https://github.com/BloodHoundAD/BloodHound/tree/master/Collectors) written in C# for use on Windows systems, or for this section, the BloodHound.py collector (also referred to as an `ingestor`) and the [BloodHound](https://github.com/BloodHoundAD/BloodHound/releases) GUI tool which allows us to upload collected data in the form of JSON files. 
+* Once uploaded, we can run various pre-built queries or write custom queries using [Cypher language](https://blog.cptjesus.com/posts/introtocypher). The tool collects data from AD such as users, groups, computers, group membership, GPOs, ACLs, domain trusts, local admin access, user sessions, computer and user properties, RDP access, WinRM access, etc.
+
+It was initially only released with a PowerShell collector, so it had to be run from a Windows host. 
+* Eventually, a Python port (which requires Impacket, `ldap3`, and `dnspython`) was released by a community member. 
+* This helped immensely during penetration tests when we have valid domain credentials, but do not have rights to access a domain-joined Windows host or do not have a Windows attack host to run the SharpHound collector from. 
+* This also helps us not have to run the collector from a domain host, which could potentially be blocked or set off alerts (though even running it from our attack host will most likely set off alarms in well-protected environments).
+
+Running `bloodhound-python -h` from our Linux attack host will show us the options available.
+
+#### BloodHound.py Options
+
+Credentialed Enumeration - from Linux
+
+```shell-session
+canklesmaks@htb[/htb]$ bloodhound-python -h
+
+usage: bloodhound-python [-h] [-c COLLECTIONMETHOD] [-u USERNAME]
+                         [-p PASSWORD] [-k] [--hashes HASHES] [-ns NAMESERVER]
+                         [--dns-tcp] [--dns-timeout DNS_TIMEOUT] [-d DOMAIN]
+                         [-dc HOST] [-gc HOST] [-w WORKERS] [-v]
+                         [--disable-pooling] [--disable-autogc] [--zip]
+
+Python based ingestor for BloodHound
+For help or reporting issues, visit https://github.com/Fox-IT/BloodHound.py
+
+optional arguments:
+  -h, --help            show this help message and exit
+  -c COLLECTIONMETHOD, --collectionmethod COLLECTIONMETHOD
+                        Which information to collect. Supported: Group,
+                        LocalAdmin, Session, Trusts, Default (all previous),
+                        DCOnly (no computer connections), DCOM, RDP,PSRemote,
+                        LoggedOn, ObjectProps, ACL, All (all except LoggedOn).
+                        You can specify more than one by separating them with
+                        a comma. (default: Default)
+  -u USERNAME, --username USERNAME
+                        Username. Format: username[@domain]; If the domain is
+                        unspecified, the current domain is used.
+  -p PASSWORD, --password PASSWORD
+                        Password
+
+  <SNIP>
+```
+
+As we can see the tool accepts various collection methods with the `-c` or `--collectionmethod` flag. We can retrieve specific data such as user sessions, users and groups, object properties, ACLS, or select `all` to gather as much data as possible. Let's run it this way.
+
+#### Executing BloodHound.py
+
+Credentialed Enumeration - from Linux
+
+```shell-session
+canklesmaks@htb[/htb]$ sudo bloodhound-python -u 'forend' -p 'Klmcargo2' -ns 172.16.5.5 -d inlanefreight.local -c all 
+
+INFO: Found AD domain: inlanefreight.local
+INFO: Connecting to LDAP server: ACADEMY-EA-DC01.INLANEFREIGHT.LOCAL
+INFO: Found 1 domains
+INFO: Found 2 domains in the forest
+INFO: Found 564 computers
+INFO: Connecting to LDAP server: ACADEMY-EA-DC01.INLANEFREIGHT.LOCAL
+INFO: Found 2951 users
+INFO: Connecting to GC LDAP server: ACADEMY-EA-DC01.INLANEFREIGHT.LOCAL
+INFO: Found 183 groups
+INFO: Found 2 trusts
+INFO: Starting computer enumeration with 10 workers
+
+<SNIP>
+```
+
+The command above executed Bloodhound.py with the user `forend`. We specified our nameserver as the Domain Controller with the `-ns` flag and the domain, INLANEFREIGHt.LOCAL with the `-d` flag. The `-c all` flag told the tool to run all checks. Once the script finishes, we will see the output files in the current working directory in the format of <date_object.json>.
+
+#### Viewing the Results
+
+Credentialed Enumeration - from Linux
+
+```shell-session
+canklesmaks@htb[/htb]$ ls
+
+20220307163102_computers.json  20220307163102_domains.json  20220307163102_groups.json  20220307163102_users.json  
+```
+
+#### Upload the Zip File into the BloodHound GUI
+
+We could then type `sudo neo4j start` to start the [neo4j](https://neo4j.com/) service, firing up the database we'll load the data into and also run Cypher queries against.
+
+Next, we can type `bloodhound` from our Linux attack host when logged in using `freerdp` to start the BloodHound GUI application and upload the data. The credentials are pre-populated on the Linux attack host, but if for some reason a credential prompt is shown, use:
+
+- `user == neo4j` / `pass == HTB_@cademy_stdnt!`.
+
+Once all of the above is done, we should have the BloodHound GUI tool loaded with a blank slate. Now we need to upload the data. We can either upload each JSON file one by one or zip them first with a command such as `zip -r ilfreight_bh.zip *.json` and upload the Zip file. We do this by clicking the `Upload Data` button on the right side of the window (green arrow). When the file browser window pops up to select a file, choose the zip file (or each JSON file) (red arrow) and hit `Open`.
+
+#### Uploading the Zip File
+
+![BloodHound interface showing database info and file selection for 'BloodHound.zip' in Downloads folder.](https://academy.hackthebox.com/storage/modules/143/bh-injest.png)
+
+Now that the data is loaded, we can use the Analysis tab to run queries against the database. These queries can be custom and specific to what you decide using [custom Cypher queries](https://hausec.com/2019/09/09/bloodhound-cypher-cheatsheet/). There are many great cheat sheets to help us here. We will discuss custom Cypher queries more in a later section. As seen below, we can use the built-in `Path Finding` queries on the `Analysis tab` on the `Left` side of the window.
+
+#### Searching for Relationships
+
+![BloodHound interface displaying pre-built analytics queries and a graph of Active Directory relationships.](https://academy.hackthebox.com/storage/modules/143/bh-analysis.png)
+
+The query chosen to produce the map above was `Find Shortest Paths To Domain Admins`. It will give us any logical paths it finds through users/groups/hosts/ACLs/GPOs, etc., relationships that will likely allow us to escalate to Domain Administrator privileges or equivalent. 
+* This will be extremely helpful when planning our next steps for lateral movement through the network. 
+* Take some time to experiment with the various features: look at the `Database Info` tab after uploading data, search for a node such as `Domain Users` and, scroll through all of the options under the `Node Info` tab, check out the pre-built queries under the `Analysis` tab, many which are powerful and can quickly find various ways to domain takeover. 
+* Finally, experiment with some custom Cypher queries by selecting some interesting ones from the Cypher cheatsheet linked above, pasting them into the `Raw Query` box at the bottom, and hitting enter. 
+* You can also play with the `Settings` menu by clicking the gear icon on the right side of the screen and adjusting how nodes and edges are displayed, enable query debug mode, and enable dark mode. 
+* Throughout the remainder of this module, we will use BloodHound in various ways, but for a dedicated study on the BloodHound tool, check out the [Active Directory BloodHound](https://academy.hackthebox.com/course/preview/active-directory-bloodhound) module.
+
+In the next section, we will cover running the SharpHound collector from a domain-joined Windows host and work through some examples of working with the data in the BloodHound GUI.
+
+---
+
+We experimented with several new tools for domain enumeration from a Linux host. 
+* The following section will cover several more tools we can use from a domain-joined Windows host. 
+* as a quick note, if you haven't checked out the [WADComs project](https://wadcoms.github.io/) yet, you definitely should. 
+* It is an interactive cheat sheet for many of the tools we will cover (and more) in this module. 
+* It's hugely helpful when you can't remember exact command syntax or are trying out a tool for the first time. Worth bookmarking and even [contributing](https://wadcoms.github.io/contribute/) to!
+
+Now, let's switch gears and start digging into the INLANEFREIGHT.LOCAL domain from our Windows attack host.
